--- a/home/templates/base_bootstrap.html
+++ b/home/templates/base_bootstrap.html
@@ -2,13 +2,12 @@
 <html>
 <head>
 <!-- Edit dj4e-samples/settings.py and add APP_NAME = 'DJ4E Samples' or similar -->
-<title>{% block title %}{{ settings.home }}{% endblock %}</title>
+<title>{% block title %}{{ settings.APP_NAME }}{% endblock %}</title>
 
 <!-- Replace this value (42-42) with the one provided by the autograder -->
-<meta name="dj4e" content="8621cdddd12002436862912970737eda"> 
+<meta name="dj4e" content="f827b5406c7aa5b4fe10062ae06a137b">
 
-<meta name="dj4e-code" content="42162012666858">
-
+<meta name="dj4e-code" content="42162065752938">
 
 <link rel="stylesheet"
     href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css"
