--- a/home/templates/registration/login.html
+++ b/home/templates/registration/login.html
@@ -1,15 +1,19 @@
-{% extends "base_bootstrap.html" %}
+{% extends "base_menu.html" %}
+{% load crispy_forms_tags %}
 
 {% block content %}
 
-{% if form.errors %}
-  <p>Your username and password didn't match. Please try again.</p>
-{% endif %}
+
 
 <form method="post" action="{% url 'login' %}">
 {% csrf_token %}
-{{ form.as_p }}
-<input type="submit" class="btn btn-primary" value="Login" />
+{{ form|crispy }}
+
+  
+
+<button type="submit" class="btn btn-primary">Login</button>
+
 <input type="hidden" name="next" value="{{ next }}" />
+
 </form>
 {% endblock %}
